ADM-150070 ensure efs is named related to stack

--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -1019,6 +1019,8 @@ Resources:
     Type: "AWS::EFS::FileSystem"
     Properties:
       FileSystemTags:
+        - Key: Name
+          Value: !Join [' ', [!Ref "AWS::StackName", 'cluster shared-files']]
         - Key: Application
           Value: !Ref "AWS::StackId"
   EFSMountAz1:
